add profit report
