# app/Http/Controllers/Swagger/ProfitReportController.php
@@ -13,25 +13,57 @@ class ProfitReportController
      *     @OA\Parameter(
      *         name="start_date",
      *         in="query",
-     *         required=true,
-     *         @OA\Schema(type="string")
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="2024-08-01"
+     *         ),
+     *         description="Start date for the profit report. Default: 6 months ago"
      *     ),
      *     @OA\Parameter(
      *         name="end_date",
      *         in="query",
-     *         required=true,
-     *         @OA\Schema(type="string")
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="2024-12-31"
+     *         ),
+     *         description="End date for the profit report. Default: today"
      *     ),
+     *     @OA\Parameter(
+     *          name="category_id",
+     *          in="query",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string",
+     *              example="1"
+     *          ),
+     *          description="Category ID for filtering. Optional"
+     *      ),
+     *     @OA\Parameter(
+     *           name="product_id",
+     *           in="query",
+     *           required=false,
+     *           @OA\Schema(
+     *               type="string",
+     *               example="10"
+     *           ),
+     *           description="Product ID for filtering. Optional"
+     *       ),
      *     @OA\Response(
      *         response=200,
      *         description="Profit report",
      *         @OA\JsonContent(
-     *             type="array",
-     *             @OA\Items(
-     *                 type="object",
-     *                 @OA\Property(property="profit", type="integer"),
-     *                 @OA\Property(property="total_profit", type="number"),
-     *                 @OA\Property(property="total_quantity", type="integer")
+     *             type="object",
+     *             @OA\Property(property="total_profit", type="integer", example=1500),
+     *             @OA\Property(property="total_quantity", type="integer", example=200),
+     *             @OA\Property(
+     *                 property="profit_by_category",
+     *                 type="array",
+     *                 @OA\Items(
+     *                     @OA\Property(property="category_name", type="string", example="Electronics"),
+     *                     @OA\Property(property="category_profit", type="integer", example=500)
+     *                 )
      *             )
      *         )
      *     )
